[package]
name = "qmd"
version = "0.1.0"
edition = "2024"

[lib]
name = "qmd"
path = "src/lib.rs"

[dependencies]
persistence = { path = "../persistence" }

async-trait      = { workspace = true }
chrono           = { workspace = true }
directories      = { workspace = true }
hex              = { workspace = true }
regex            = { workspace = true }
reqwest          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
sha2             = { workspace = true }
surrealdb        = { workspace = true }
surrealdb-types  = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true }
url              = { workspace = true }

# File scanning utilities (kept for parity with existing Rust port)
globset  = "0.4"
globwalk = "0.9"
llama_cpp = "0.3.2"

[dev-dependencies]
tempfile = "3.27.0"

