[package]
name = "sandbox"
edition = "2024"
version = "0.0.1"

[lib]
name = "sandbox"

[dependencies]
common = { path = "../common" }

# Workspace dependencies
anyhow        = { workspace = true }
cap-async-std = { workspace = true }
dunce         = { workspace = true }
ignore        = { workspace = true }
once_cell     = { workspace = true }
same-file     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
