[package]
name = "tools"
edition = "2024"
version = "0.0.1"
build = "build.rs"

[features]
default = []
# Use in-memory SurrealDB so tests run without a running server
testing = ["persistence/testing"]
debug-tracing = []

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.1"
libc = { workspace = true }
seccompiler = "0.5.0"

[dependencies]
# Local dependencies
common = { path = "../common" }
persistence = { path = "../persistence" }
sandbox = { path = "../sandbox" }

# Workspace dependencies
anyhow             = { workspace = true }
async-trait        = { workspace = true }
cap-async-std      = { workspace = true }
chrono             = { workspace = true }
schemars           = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tauri-plugin-shell = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
base64 = { workspace = true }

[dev-dependencies]
tauri   = { workspace = true }
tempdir = { workspace = true }