[package]
name = "vault"
edition = "2024"
version = "0.0.1"

[lib]
name = "vault"

[dependencies]
shared = { path = "../shared" }

# Workspace dependencies
anyhow          = { workspace = true }
hkdf            = { workspace = true }
iota_stronghold = { workspace = true }
machine-uid     = { workspace = true }
sha2            = { workspace = true }
lazy_static     = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
surrealdb       = { workspace = true }
zeroize         = { workspace = true }
