[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
adapters =    { path = "../adapters" }
employee-import = { path = "../employee-import" }
events =      { path = "../events" }
memory =      { path = "../memory" }
persistence = { path = "../persistence" }
skills =      { path = "../skills" }
shared =      { path = "../shared" }
vault =       { path = "../vault" }

axum =               { workspace = true, features = ["ws"] }
anyhow =             { workspace = true }
argon2 =             { workspace = true }
chrono =             { workspace = true }
colored =            { workspace = true }
hex =                { workspace = true }
lazy_static =        { workspace = true }
rand =               { workspace = true }
serde =              { workspace = true }
serde_json =         { workspace = true }
sha2 =               { workspace = true }
thiserror =          { workspace = true }
tokio =              { workspace = true }
tower-http =         { workspace = true }
tracing =            { workspace = true }
ts-rs =              { workspace = true }
utoipa =             { workspace = true }
reqwest =            { workspace = true }
url =                { workspace = true }
async-trait =        { workspace = true }
rmcp =               { workspace = true }
uuid =               { workspace = true }
oauth2 =             { version = "5.0", default-features = false }

[dev-dependencies]
tempfile = "3.23.0"
tower = "0.5.2"
urlencoding = "2.1.3"
